@@ -2,12 +2,14 @@
 
 rm -rf deb-package
 
-EXE_PATH=deb-package/usr/bin/
-SRC_PATH=deb-package/usr/src/
+FIN_EXE_PATH=/usr/bin/
+FIN_SRC_PATH=/usr/src/
+
+EXE_PATH=deb-package/$FIN_EXE_PATH
+SRC_PATH=deb-package/$FIN_SRC_PATH
 DOC_PATH=deb-package/usr/share/doc/ezc/
 
-EZC_BIN="#\!/bin/bash\\n$SRC_INSTALL_DIR/ezcc.py \"\${@}\""
-
+EZC_BIN="#!/bin/bash\\n$FIN_SRC_PATH/ezcc.py \"\${@}\""
 DIRS="deb-package/DEBIAN/ $DOC_PATH"
 
 for DIR in $DIRS
@@ -19,27 +21,20 @@ FL="ezcc.deb"
 # Do generic install
 ./install-all.sh $EXE_PATH $SRC_PATH
 
-# Replace exe files (bc linking)
-echo $EZC_BIN > $EXE_PATH/ezc
-echo $EZC_BIN > $EXE_PATH/ezcc
+# Replace exe files (bc this is in whole filesystem)
+echo -e $EZC_BIN > $EXE_PATH/ezc
+echo -e $EZC_BIN > $EXE_PATH/ezcc
 
 echo "Now copying in debian files"
 cp CONTROL deb-package/DEBIAN/control
 cp COPYRIGHT $DOC_PATH/copyright
 gzip -n -9 -c changelog > $DOC_PATH/changelog.gz
 
-# neccessary 
-#printf "\nChanging file permissions to build deb package\n"
-#chmod 0755 $DIRS/*
-#chmod 0755 deb-package/usr/src/ezc/utils/*
-#chmod 0755 $DIRS
-#chmod 0644 deb-package/usr/share/doc/ezc/*
-#chmod 0644 deb-package/usr/src/ezc/*.py
-#chmod 0755 deb-package/usr/src/ezc/ezcc.py
-#chmod 0755 deb-package/usr/bin/*
+# For bundling
 chmod -R 0755 deb-package/usr/
 chmod 0755 $EXE_PATH/*
 chmod 0644 $SRC_PATH/*.py
+chmod 0755 $SRC_PATH/ezcc.py
 chmod 0644 $DOC_PATH/*
 
 printf "\nDeb file:\n"
