@@ -1,4 +1,4 @@
-#!/bin/ezc -runfile
+#!/usr/bin/ezc -runfile
 setprec $1
 {mpfr_const_pi(i, MPFR_RNDN)}
 var_raw i
