@@ -1,4 +1,4 @@
-#!/bin/ezc -runfile
+#!/usr/bin/ezc -runfile
 prec $3
 i = $1
 { if (_argc >= 3) { varbraw(i, strtol(_argv[2], NULL, 10), 0); } else { varbraw(i, 10, 0); } }
